# serde_mosaic

./: Cargo.toml  LICENSE  README.md  README.template.md  README_local.md  build.rs
src/: attributes.rs  database_manager.rs  format.rs  lib.rs  serde_annotations.rs
tests/: basic_db_manipulation.rs  read.rs  read_aliasing_arc_links.rs  read_and_write_nested_links.rs  read_and_write_single_arc_link.rs  read_and_write_single_arc_link_opt.rs  read_from_str.rs  read_nested_arc_links.rs  read_single_link.rs  serialize_and_deserialize.rs  utilities.rs  write.rs  write_and_read.rs  write_single_link.rs
tests/test_database/Cup/: bad_file.yaml  joes_cup.yaml  mikes_cup.yaml
tests/test_database/Cupboard/: empty_cupboard.yaml  full_cupboard.yaml
tests/test_database/Material/: Georgs_alloy.yaml  Georgs_birch.yaml  alu.yaml  bad_file.yaml  ceramic.yaml  copper.yaml  steel.yaml  wood.yaml
tests/test_database/Shelf/: Georgs_shelf.yaml  empty_shelf.yaml  full_shelf.yaml
tests/test_database/Shovel/: Georgs_shovel.yaml  shovel.yaml
tests/test_database/Stool/: stool.yaml
tests/test_database/User/: mike.yaml
tests/test_database/my_struct/: my_struct_arc_db_link_read.yaml  my_struct_arc_none.yaml  my_struct_arc_some.yaml  my_struct_flat_read.yaml  my_struct_link_overwrite.yaml  my_struct_multiple_aliasing_db_links.yaml  my_struct_single_db_link_malformed_read.yaml  my_struct_single_db_link_read.yaml  my_struct_with_linked_fields_doubly_wrapped.yaml
tests/test_database/number_wrapper/: number_double_wrapper.yaml  number_single_wrapper.yaml  number_triple_wrapper.yaml  number_wrapper.yaml  number_wrapper_arc.yaml  number_wrapper_malformed.yaml  (+1 more)
