[package]
name = "shared_arc_db"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
deserialize_untagged_verbose_error = { path = "../deserialize_untagged_verbose_error"}
serde_yaml = {version = "0.8", optional = true}
serde_json = {version = "1", optional = true}
utilities = { path = "../utilities"}
adler32 = {version = "1"}

[features]
default = ["yaml"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]

[dev-dependencies]
approx = { package = "approxim", version = "0.6" }
indoc = "1.0"
shared_arc_db = { path = "." }